configure coc-explorer

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -72,6 +72,9 @@
         "bing",
         "youdao"
     ],
-    "translator.window.enableBorder": true
+    "translator.window.enableBorder": true,
 
+    "explorer.width": 40,
+    "explorer.icon.enableNerdfont": true,
+    "explorer.floating.position": "center-top"
 }
