--- a/coc-settings.json
+++ b/coc-settings.json
@@ -10,52 +10,56 @@
     "coc.preferences.formatOnType": true,
     "coc.preferences.snippets.enable": true,
     "coc.preferences.promptInput": true,
-    "dialog.confirmKey": "<cr>",
     "suggest.detailField":"abbr",
+    "dialog.confirmKey": "<cr>",
     "suggest.echodocSupport": true,
+    "suggest.acceptSuggestionOnCommitCharacter":true,
+    "suggest.preferCompleteThanJumpPlaceholder":true,
+    "suggest.localityBonus": true,
     "suggest.noselect":true,
-    "suggest.enablePreselect": false,
+    "suggest.enablePreselect":true,
     "suggest.floatEnable":true,
     "suggest.enablePreview": true,
     "suggest.autoTrigger":"always",
-    "suggest.triggerCompletionWait": 100,
     "suggest.completionItemKindLabels": {
-      "keyword": "key",
-      "variable": "var",
-      "operator": "+",
-      "constructor": "cons",
-      "function": "func",
-      "reference": "ref",
-      "constant": "K",
-      "method": "func",
-      "struct": "struct",
-      "class": "class",
-      "interface": "interface",
-      "text": "text",
-      "enum": "enum",
-      "enumMember": "enumM",
-      "module": "modu",
-      "color": "color",
-      "property": "property",
-      "field": "field",
-      "unit": "unit",
-      "event": "event",
-      "file": "file",
-      "folder": "folder",
-      "snippet": "snippet",
-      "typeParameter": "typeParam",
-      "default": ""
-    },
+        "function"              : "\uf794 func",
+        "method"                : "\uf6a6 func",
+        "variable"              : "\uf71b var",
+        "constant"              : "\uf8ff k",
+        "struct"                : "\ufb44 struct",
+        "class"                 : "\uf0e8 class",
+        "interface"             : "\ufa52interface",
+        "text"                  : "\ue612 text",
+        "enum"                  : "\uf435 enum",
+        "enumMember"            : "\uf02b enumMember",
+        "module"                : "\uf668 module",
+        "color"                 : "\ue22b color",
+        "property"              : "\ufab6 property",
+        "field"                 : "\uf93d field",
+        "unit"                  : "\uf475 unit",
+        "file"                  : "\uf471 file",
+        "value"                 : "\uf8a3 value",
+        "event"                 : "\ufacd event",
+        "folder"                : "\uf115 folder",
+        "keyword"               : "\uf893 keyword",
+        "snippet"               : "\uf64d snippet",
+        "operator"              : "\uf915 +",
+        "reference"             : "\uf87a ref",
+        "typeParameter"         : "\uf278 typeParameter",
+        "default"               : "\uf29c default"
+      },
+    "suggest.triggerCompletionWait": 100,
     "snippets.extends": {
         "cpp" : ["cpp", "c"],
         "c" : ["c"]
     },
+    "diagnostic.highlightOffset": 10,
     "diagnostic.enable":true,
     "diagnostic.showUnused": true,
-    "diagnostic.errorSign": "!>",
-    "diagnostic.warningSign": ">>",
-    "diagnostic.hintSign": "H>",
-    "diagnostic.infoSign": "I>",
+    "diagnostic.errorSign": "🗙 ",
+    "diagnostic.warningSign": "🞥 ",
+    "diagnostic.hintSign": "›",
+    "diagnostic.infoSign": "›",
     "diagnostic.enableSign": true,
     "diagnostic.level": "hint",
     "diagnostic.messageDelay": 100,
@@ -63,8 +67,11 @@
     "diagnostic.checkCurrentLine": true,
     "diagnostic.virtualText":true,
     "diagnostic.virtualTextLines": 10,
-    "diagnostic.virtualTextPrefix": "> ",
-    "diagnostic.virtualTextCurrentLineOnly": true,
+    "diagnostic.virtualTextPrefix": " ⮩ ",
+    "diagnostic.virtualTextCurrentLineOnly": false,
+    "diagnostic.showDeprecated": true,
+    "diagnostic.enableHighlightLineNumber":true,
+    "diagnostic.refreshOnInsertMode":true,
     "diagnostic.format":"%message [%source%code] [%severity]",
 
     "translator.enableHover": false,
