use tree-sitter and leaderf

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,6 @@
 {
     "list.indicator": ">",
+    "highlight.colors.enable":false,
     "list.nextKeymap": "<C-j>",
     "list.previousKeymap": "<C-k>",
     "coc.preferences.floatActions": true,
