--- a/coc-settings.json
+++ b/coc-settings.json
@@ -22,33 +22,34 @@
     "suggest.floatEnable":true,
     "suggest.enablePreview": true,
     "suggest.autoTrigger":"always",
-    "suggest.completionItemKindLabels": {
-        "function"              : "\uf794 func",
-        "method"                : "\uf6a6 func",
-        "variable"              : "\uf71b var",
-        "constant"              : "\uf8ff k",
-        "struct"                : "\ufb44 struct",
-        "class"                 : "\uf0e8 class",
-        "interface"             : "\ufa52interface",
-        "text"                  : "\ue612 text",
-        "enum"                  : "\uf435 enum",
-        "enumMember"            : "\uf02b enumMember",
-        "module"                : "\uf668 module",
-        "color"                 : "\ue22b color",
-        "property"              : "\ufab6 property",
-        "field"                 : "\uf93d field",
-        "unit"                  : "\uf475 unit",
-        "file"                  : "\uf471 file",
-        "value"                 : "\uf8a3 value",
-        "event"                 : "\ufacd event",
-        "folder"                : "\uf115 folder",
-        "keyword"               : "\uf893 keyword",
-        "snippet"               : "\uf64d snippet",
-        "operator"              : "\uf915 +",
-        "reference"             : "\uf87a ref",
-        "typeParameter"         : "\uf278 typeParameter",
-        "default"               : "\uf29c default"
-      },
+	  "suggest.completionItemKindLabels": {
+		"keyword": "\uf1de",
+		"variable": "\ue79b",
+		"value": "\uf89f",
+		"operator": "\u03a8",
+		"constructor": "\uf0ad",
+		"function": "\u0192",
+		"reference": "\ufa46",
+		"constant": "\uf8fe",
+		"method": "\uf09a",
+		"struct": "\ufb44",
+		"class": "\uf0e8",
+		"interface": "\uf417",
+		"text": "\ue612",
+		"enum": "\uf435",
+		"enumMember": "\uf02b",
+		"module": "\uf40d",
+		"color": "\ue22b",
+		"property": "\ue624",
+		"field": "\uf9be",
+		"unit": "\uf475",
+		"event": "\ufacd",
+		"file": "\uf723",
+		"folder": "\uf114",
+		"snippet": "\ue60b",
+		"typeParameter": "\uf728",
+		"default": "\uf29c"
+	},
     "suggest.triggerCompletionWait": 100,
     "snippets.extends": {
         "cpp" : ["cpp", "c"],
