--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,8 +1,10 @@
 {
-    "list.indicator": ">",
     "highlight.colors.enable":false,
+    "list.indicator": ">",
+    "list.extendedSearchMode": true ,
     "list.nextKeymap": "<C-j>",
     "list.previousKeymap": "<C-k>",
+    "coc.preferences.currentFunctionSymbolAutoUpdate": true,
     "coc.preferences.floatActions": true,
     "coc.preferences.enableMessageDialog": true,
     "coc.preferences.colorSupport": true,
@@ -23,32 +25,32 @@
     "suggest.enablePreview": true,
     "suggest.autoTrigger":"always",
 	  "suggest.completionItemKindLabels": {
-		"keyword": "\uf1de",
-		"variable": "\ue79b",
-		"value": "\uf89f",
-		"operator": "\u03a8",
-		"constructor": "\uf0ad",
-		"function": "\u0192",
-		"reference": "\ufa46",
-		"constant": "\uf8fe",
-		"method": "\uf09a",
-		"struct": "\ufb44",
-		"class": "\uf0e8",
-		"interface": "\uf417",
-		"text": "\ue612",
-		"enum": "\uf435",
-		"enumMember": "\uf02b",
-		"module": "\uf40d",
-		"color": "\ue22b",
-		"property": "\ue624",
-		"field": "\uf9be",
-		"unit": "\uf475",
-		"event": "\ufacd",
-		"file": "\uf723",
-		"folder": "\uf114",
-		"snippet": "\ue60b",
-		"typeParameter": "\uf728",
-		"default": "\uf29c"
+      "keyword": "\uf1de",
+      "variable": "\ue79b",
+      "value": "\uf89f",
+      "operator": "\u03a8",
+      "constructor": "\uf0ad",
+      "function": "\u0192",
+      "reference": "\ufa46",
+      "constant": "\uf8fe",
+      "method": "\uf09a",
+      "struct": "\ufb44",
+      "class": "\uf0e8",
+      "interface": "\uf417",
+      "text": "\ue612",
+      "enum": "\uf435",
+      "enumMember": "\uf02b",
+      "module": "\uf40d",
+      "color": "\ue22b",
+      "property": "\ue624",
+      "field": "\uf9be",
+      "unit": "\uf475",
+      "event": "\ufacd",
+      "file": "\uf723",
+      "folder": "\uf114",
+      "snippet": "\ue60b",
+      "typeParameter": "\uf728",
+      "default": "\uf29c"
 	},
     "suggest.triggerCompletionWait": 100,
     "snippets.extends": {
@@ -69,7 +71,7 @@
     "diagnostic.checkCurrentLine": true,
     "diagnostic.virtualText":true,
     "diagnostic.virtualTextLines": 10,
-    "diagnostic.virtualTextPrefix": " ⮩ ",
+    "diagnostic.virtualTextPrefix": " ⮩  ",
     "diagnostic.virtualTextCurrentLineOnly": false,
     "diagnostic.showDeprecated": true,
     "diagnostic.enableHighlightLineNumber":true,
@@ -90,8 +92,12 @@
     "explorer.keyMappings.global": {
       "u" : ["wait", "gotoParent"]
     },
-    "rainbow-fart.enabled": true,
+    "rainbow-fart.enabled": false,
     "rainbow-fart.locale": ["zh"],
     "rainbow-fart.ffplay": "ffplay",
-    "rainbow-fart.disable-voice-packages": []
+    "rainbow-fart.disable-voice-packages": [],
+
+    "git.enableGutters": true,
+    "git.enableGlobalStatus": true
+
 }
