--- a/coc-settings.json
+++ b/coc-settings.json
@@ -98,6 +98,8 @@
     "rainbow-fart.disable-voice-packages": [],
 
     "git.enableGutters": true,
-    "git.enableGlobalStatus": true
+    "git.enableGlobalStatus": true,
+
+    "java.home": "/usr/lib/jvm/java-16-jdk"
 
 }
