--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,29 +1,44 @@
 {
-    "highlight.colors.enable":false,
+    "highlight.colors.enable":true,
+    "highlight.document.enable": true,
     "list.indicator": ">",
     "list.extendedSearchMode": true ,
     "list.nextKeymap": "<C-j>",
     "list.previousKeymap": "<C-k>",
+    "list.alignColumns": true,
+    "list.selectedSignText": ">",
+    "hover.target": "float",
+    "hover.floatMaxWidth": 80,
+    "hover.autoHide": true,
+    "hover.floatMaxHeight": 25,
     "coc.preferences.currentFunctionSymbolAutoUpdate": true,
     "coc.preferences.floatActions": true,
     "coc.preferences.enableMessageDialog": true,
     "coc.preferences.colorSupport": true,
-    "coc.preferences.hoverTarget":"float",
     "coc.preferences.enableFloatHighlight": true,
     "coc.preferences.formatOnType": true,
-    "coc.preferences.snippets.enable": true,
     "coc.preferences.promptInput": true,
-    "suggest.detailField":"abbr",
+    "snippets.snipmate.enable":true,
     "dialog.confirmKey": "<cr>",
+    "suggest.detailField":"menu",
     "suggest.echodocSupport": true,
     "suggest.acceptSuggestionOnCommitCharacter":true,
     "suggest.preferCompleteThanJumpPlaceholder":true,
+
     "suggest.localityBonus": true,
     "suggest.noselect":true,
     "suggest.enablePreselect":true,
-    "suggest.floatEnable":true,
-    "suggest.enablePreview": true,
+    "suggest.enablePreview":true,
+
     "suggest.autoTrigger":"always",
+    "suggest.numberSelect": false,
+    "suggest.labelMaxLength": 50,
+    "suggest.maxPreviewWidth": 60,
+    "suggest.maxCompleteItemCount": 20,
+    "suggest.detailMaxLength": 60,
+    "suggest.defaultSortMethod":"alphabetical",
+    "suggest.removeDuplicateItems": true,
+    "suggest.snippetIndicator": "s",
 	  "suggest.completionItemKindLabels": {
       "keyword": "\uf1de",
       "variable": "\ue79b",
@@ -52,28 +67,35 @@
       "typeParameter": "\uf728",
       "default": "\uf29c"
 	},
-    "suggest.triggerCompletionWait": 100,
+    "suggest.triggerCompletionWait": 30,
     "snippets.extends": {
-        "cpp" : ["cpp", "c"],
-        "c" : ["c"]
+        "cpp" : ["cpp", "c", "cc"],
+        "c"   : ["c"],
+        "cc"  : ["c", "cc", "cpp"],
+        "rs"  : ["rs"]
     },
     "diagnostic.highlightOffset": 10,
     "diagnostic.enable":true,
     "diagnostic.showUnused": true,
-    "diagnostic.errorSign": "⛌",
-    "diagnostic.warningSign": "⟁ ",
+    "diagnostic.errorSign": "✖",
+    "diagnostic.warningSign": "➤ ",
     "diagnostic.hintSign": "›",
     "diagnostic.infoSign": "›",
     "diagnostic.enableSign": true,
     "diagnostic.level": "hint",
-    "diagnostic.messageDelay": 100,
+    "diagnostic.messageDelay": 10,
     "diagnostic.displayByAle":false,
-    "diagnostic.checkCurrentLine": true,
     "diagnostic.virtualText":true,
     "diagnostic.virtualTextLines": 10,
-    "diagnostic.virtualTextPrefix": " ⮩  ",
+    "diagnostic.virtualTextPrefix": " ½ ",
     "diagnostic.virtualTextCurrentLineOnly": false,
     "diagnostic.showDeprecated": true,
+    "diagnostic.autoRefresh": true,
+    "diagnostic.checkCurrentLine": true,
+    "diagnostic.maxWindowWidth": 60,
+    "diagnostic.maxWindowHeight": 30,
+    "diagnostic.messageTarget":"float",
+    "diagnostic.enableMessage":"jump",
     "diagnostic.enableHighlightLineNumber":true,
     "diagnostic.refreshOnInsertMode":true,
     "diagnostic.format":"%message [%source%code] [%severity]",
@@ -85,21 +107,23 @@
     ],
     "translator.window.enableBorder": true,
 
-    "explorer.width": 30,
+    "explorer.width": 26,
+    "explorer.position":"floating",
+    "explorer.quitOnOpen": true,
+    "explorer.git.enable": true,
+    "explorer.file.cdCommand": "cd",
     "explorer.filename.colored.enable": true,
     "explorer.icon.enableNerdfont": true,
     "explorer.floating.position": "center-top",
     "explorer.keyMappings.global": {
       "u" : ["wait", "gotoParent"]
     },
-    "rainbow-fart.enabled": false,
-    "rainbow-fart.locale": ["zh"],
-    "rainbow-fart.ffplay": "ffplay",
-    "rainbow-fart.disable-voice-packages": [],
 
     "git.enableGutters": true,
     "git.enableGlobalStatus": true,
 
-    "java.home": "/usr/lib/jvm/java-16-jdk"
-
+    "java.home": "/usr/lib/jvm/java-16-jdk",
+    "rust-analyzer.hoverActions.enable": true,
+    "rust-analyzer.hover.documentation": true,
+    "rust-analyzer.hover.linksInHover": true
 }
