--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,148 +1,231 @@
 {
-    "highlight.colors.enable":true,
-    "highlight.document.enable": true,
-    "list.indicator": ">",
-    "list.extendedSearchMode": true ,
-    "list.nextKeymap": "<C-j>",
-    "list.previousKeymap": "<C-k>",
-    "list.alignColumns": true,
-    "list.selectedSignText": ">",
-    "hover.target": "float",
-    "hover.floatMaxWidth": 80,
-    "hover.autoHide": true,
-    "hover.floatMaxHeight": 25,
-    "coc.preferences.currentFunctionSymbolAutoUpdate": true,
-    "coc.preferences.floatActions": true,
-    "coc.preferences.enableMessageDialog": true,
-    "coc.preferences.colorSupport": true,
-    "coc.preferences.enableFloatHighlight": true,
-    "coc.preferences.formatOnType": true,
-    "coc.preferences.promptInput": true,
-    "snippets.snipmate.enable":true,
-    "dialog.confirmKey": "<cr>",
-    "suggest.detailField":"menu",
-    "suggest.echodocSupport": true,
-    "suggest.acceptSuggestionOnCommitCharacter":true,
-    "suggest.preferCompleteThanJumpPlaceholder":true,
+  // List
+  "list.indicator": ">",
+  "list.alignColumns": true,
+  "list.selectedSignText": "*",
+  "list.previewSplitRight": true,
+  "list.extendedSearchMode": true,
+  "list.nextKeymap": "<C-j>",
+  "list.previousKeymap": "<C-k>",
 
-    "suggest.localityBonus": true,
-    "suggest.noselect":true,
-    "suggest.enablePreselect":true,
-    "suggest.enablePreview":true,
+  // Call Hierarchy
+  "callHierarchy.enableTooltip": true,
 
-    "suggest.autoTrigger":"always",
-    "suggest.numberSelect": false,
-    "suggest.labelMaxLength": 50,
-    "suggest.maxPreviewWidth": 60,
-    "suggest.maxCompleteItemCount": 50,
-    "suggest.detailMaxLength": 60,
-    "suggest.defaultSortMethod":"alphabetical",
-    "suggest.removeDuplicateItems": true,
-    "suggest.snippetIndicator": "",
-	  "suggest.completionItemKindLabels": {
-      "keyword": "\uf1de",
-      "variable": "\ue79b",
-      "value": "\uf89f",
-      "operator": "\u03a8",
-      "constructor": "\uf0ad",
-      "function": "\u0192",
-      "reference": "\ufa46",
-      "constant": "\uf8fe",
-      "method": "\uf09a",
-      "struct": "\ufb44",
-      "class": "\uf0e8",
-      "interface": "\uf417",
-      "text": "\ue612",
-      "enum": "\uf435",
-      "enumMember": "\uf02b",
-      "module": "\uf40d",
-      "color": "\ue22b",
-      "property": "\ue624",
-      "field": "\uf9be",
-      "unit": "\uf475",
-      "event": "\ufacd",
-      "file": "\uf723",
-      "folder": "\uf114",
-      "snippet": "\ue60b",
-      "typeParameter": "\uf728",
-      "default": "\uf29c"
-	},
-    "suggest.triggerCompletionWait": 30,
-    "snippets.extends": {
-        "cpp" : ["cpp", "c", "cc"],
-        "c"   : ["c"],
-        "cc"  : ["c", "cc", "cpp"],
-        "rs"  : ["rs"]
-    },
-    "diagnostic.highlightOffset": 10,
-    "diagnostic.enable":true,
-    "diagnostic.showUnused": true,
-    "diagnostic.errorSign": "✖",
-    "diagnostic.warningSign": "➤ ",
-    "diagnostic.hintSign": "›",
-    "diagnostic.infoSign": "›",
-    "diagnostic.enableSign": true,
-    "diagnostic.level": "hint",
-    "diagnostic.messageDelay": 10,
-    "diagnostic.displayByAle":false,
-    "diagnostic.virtualText":true,
-    "diagnostic.virtualTextLines": 10,
-    "diagnostic.virtualTextPrefix": " ½ ",
-    "diagnostic.virtualTextCurrentLineOnly": false,
-    "diagnostic.showDeprecated": true,
-    "diagnostic.autoRefresh": true,
-    "diagnostic.checkCurrentLine": true,
-    "diagnostic.maxWindowWidth": 60,
-    "diagnostic.maxWindowHeight": 30,
-    "diagnostic.messageTarget":"float",
-    "diagnostic.enableMessage":"jump",
-    "diagnostic.enableHighlightLineNumber":true,
-    "diagnostic.refreshOnInsertMode":true,
-    "diagnostic.format":"%message [%source%code] [%severity]",
+  // Hover
+  "hover.target": "float",
+  "hover.previewMaxHeight": 12,
+  "hover.floatConfig": {
+    "border": true,
+    "focusable": true,
+    "maxWidth": 80
+  },
+  "hover.autoHide": true,
 
-    "translator.enableHover": false,
-    "translator.engines": [
-        "bing",
-        "youdao"
+  // Dialog
+  "dialog.confirmKey": "<cr>",
+
+  // Outline
+  "outline.showLineNumber": true,
+  "outline.followCursor": true,
+  "outline.keepWindow": false,
+  "outline.checkBufferSwitch": true,
+  "outline.expandLevel": 2,
+
+  // Preferences
+  "coc.preferences.enableMessageDialog": true,
+  "coc.preferences.maxFileSize": "10MB",
+  "coc.preferences.promptWorkspaceEdit": true,
+  "coc.preferences.colorSupport": true,
+  "coc.preferences.semanticTokensHighlights": true,
+  "coc.preferences.currentFunctionSymbolAutoUpdate": false,
+  "coc.preferences.formatOnSaveFiletypes": [],
+  "coc.preferences.rootPatterns": [
+    ".git",
+    ".hg",
+    ".project.json",
+    ".toml"
+  ],
+  "coc.preferences.jumpCommand": "tabe",
+  "coc.preferences.formatOnType": false,
+  "coc.preferences.bracketEnterImprove": true,
+  "coc.preferences.promptInput": true,
+  "coc.preferences.floatActions": true,
+  "coc.preferences.enableFloatHighlight": true,
+  "snippets.snipmate.enable": true,
+
+  // Suggest Configuration
+  "suggest.enablePreselect": true,
+  "suggest.enablePreview": true,
+  "suggest.floatEnable": true,
+  "suggest.floatConfig": {
+    "border": true,
+    "shadow": false,
+    "maxWidth": 50
+  },
+  "suggest.labelMaxLength": 50,
+  "suggest.detailMaxLength": 60,
+  "suggest.detailField": "preview",
+  "suggest.autoTrigger": "always",
+  "suggest.languageSourcePriority": 90,
+  "suggest.numberSelect": false,
+  "suggest.disableKind": false,
+  "suggest.disableMenu": false,
+  "suggest.disableMenuShortcut": false,
+  "suggest.snippetIndicator": "~",
+  "suggest.maxCompleteItemCount": 50,
+  "suggest.preferCompleteThanJumpPlaceholder": true,
+  "suggest.fixInsertedWord": true,
+  "suggest.localityBonus": true,
+  "suggest.triggerAfterInsertEnter": false,
+  "suggest.timeout": 500,
+  "suggest.minTriggerInputLength": 1,
+  "suggest.triggerCompletionWait": 500,
+  "suggest.echodocSupport": true,
+  "suggest.acceptSuggestionOnCommitCharacter": false,
+  "suggest.noselect": true,
+  "suggest.keepCompleteopt": false,
+  "suggest.lowPrioritySourceLimit": 50,
+  "suggest.highPrioritySourceLimit": 50,
+  "suggest.removeDuplicateItems": true,
+  "suggest.defaultSortMethod": "alphabetical",
+  "suggest.snippetsSupport": true,
+  "suggest.completionItemKindLabels": {
+    "keyword": "\uf1de",
+    "variable": "\ue79b",
+    "value": "\uf89f",
+    "operator": "\u03a8",
+    "constructor": "\uf0ad",
+    "function": "\u0192",
+    "reference": "\ufa46",
+    "constant": "\uf8fe",
+    "method": "\uf09a",
+    "struct": "\ufb44",
+    "class": "\uf0e8",
+    "interface": "\uf417",
+    "text": "\ue612",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "module": "\uf40d",
+    "color": "\ue22b",
+    "property": "\ue624",
+    "field": "\uf9be",
+    "unit": "\uf475",
+    "event": "\ufacd",
+    "file": "\uf723",
+    "folder": "\uf114",
+    "snippet": "\ue60b",
+    "typeParameter": "\uf728",
+    "default": "\uf29c"
+  },
+  "suggest.asciiCharactersOnly": false,
+
+  // Diagnostic
+  "diagnostic.enable": true,
+  "diagnostic.highlighLimit": 10,
+  "diagnostic.autoRefresh": true,
+  "diagnostic.level": "hint",
+  "diagnostic.locationlistUpdate": true,
+  "diagnostic.checkCurrentLine": true,
+  "diagnostic.messageTarget": "float",
+  "diagnostic.messageDelay": 200,
+  "diagnostic.refreshOnInsertMode": false,
+  "diagnostic.displayByAle": false,
+  "diagnostic.virtualText": true,
+  "diagnostic.virtualTextCurrentLineOnly": false,
+  "diagnostic.virtualTextPrefix": " ½ ",
+  "diagnostic.virtualTextLines": 10,
+  "diagnostic.virtualTextLineSeparator": "\\",
+  "diagnostic.enableSign": true,
+  "diagnostic.enableHighlightLineNumber": true,
+  "diagnostic.enableMessage": "jump",
+  "diagnostic.highlightOffset": 10,
+  "diagnostic.signPriority": 10,
+  "diagnostic.errorSign": "✖",
+  "diagnostic.warningSign": "➤ ",
+  "diagnostic.infoSign": "›",
+  "diagnostic.hintSign": "›",
+  "diagnostic.floatConfig": {
+    "border": true,
+    "title": "Diagnostic",
+    "focusable": false
+  },
+  "diagnostic.filetypeMap": {},
+  "diagnostic.format": "%message [%source%code] [%severity]",
+  "diagnostic.separateRelatedInformationAsDiagnostics": true,
+  "diagnostic.showUnused": false,
+  "diagnostic.showDeprecated": true,
+
+  // coc-translator
+  "translator.enableHover": false,
+  "translator.engines": [
+    "bing",
+    "youdao"
+  ],
+  "translator.window.enableBorder": true,
+  "explorer.width": 26,
+  "explorer.position": "floating",
+  "explorer.quitOnOpen": true,
+  "explorer.git.enable": true,
+  "explorer.file.cdCommand": "cd",
+  "explorer.filename.colored.enable": true,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.floating.position": "center-top",
+  "explorer.keyMappings.global": {
+    "u": [
+      "wait",
+      "gotoParent"
+    ]
+  },
+  "git.enableGutters": true,
+  "git.enableGlobalStatus": false,
+  "git.addGBlameToVirtualText": false,
+  "git.virtualTextPrefix": " @:",
+  "java.home": "/usr/lib/jvm/java-16-jdk",
+
+  // Rust-analyzer
+  "rust-analyzer.hoverActions.enable": true,
+  "rust-analyzer.hover.documentation": true,
+  "rust-analyzer.hover.linksInHover": true,
+  "rust-analyzer.checkOnSave.allTargets": false,
+  "rust-analyzer.updates.channel": "nightly",
+  "rust-analyzer.cargo.allFeatures": true,
+
+  // coc-restclient: allow to send HTTP request and view the response
+  "rest-client.enable": true,
+  "rest-client.showHeaders": true,
+  "rest-client.proxy": "",
+  "rest-client.proxyStrictSSL": false,
+  "rest-client.excludeHostsForProxy": [],
+  "rest-client.timeoutinmilliseconds": 0,
+  "rest-client.followredirect": true,
+  "rest-client.certificates": {},
+
+  // coc-leetcode
+  "leetcode.enabled": true,
+  "leetcode.language": "rust",
+  "leetcode.trace.server": "off",
+
+  // snippets
+  "snippets.extends": {
+    "cpp": [
+      "cpp",
+      "c",
+      "cc"
     ],
-    "translator.window.enableBorder": true,
+    "c": [
+      "c"
+    ],
+    "cc": [
+      "c",
+      "cc",
+      "cpp"
+    ],
+    "rs": [
+      "rs"
+    ]
+  },
 
-    "explorer.width": 26,
-    "explorer.position":"floating",
-    "explorer.quitOnOpen": true,
-    "explorer.git.enable": true,
-    "explorer.file.cdCommand": "cd",
-    "explorer.filename.colored.enable": true,
-    "explorer.icon.enableNerdfont": true,
-    "explorer.floating.position": "center-top",
-    "explorer.keyMappings.global": {
-      "u" : ["wait", "gotoParent"]
-    },
-
-    "git.enableGutters": true,
-    "git.enableGlobalStatus": false,
-    "git.addGBlameToVirtualText": false,
-    "git.virtualTextPrefix": " @:",
-
-    "java.home": "/usr/lib/jvm/java-16-jdk",
-    "rust-analyzer.hoverActions.enable": true,
-    "rust-analyzer.hover.documentation": true,
-    "rust-analyzer.hover.linksInHover": true,
-    "rust-analyzer.checkOnSave.allTargets": false,
-
-    // coc-restclient: allow to send HTTP request and view the response
-    "rest-client.enable" : true,
-    "rest-client.showHeaders" : true,
-    "rest-client.proxy" : "",
-    "rest-client.proxyStrictSSL" : false,
-    "rest-client.excludeHostsForProxy" : [],
-    "rest-client.timeoutinmilliseconds" : 0,
-    "rest-client.followredirect" : true,
-    "rest-client.certificates" : {}, 
-
-    // coc-leetcode
-    "leetcode.enabled": true,
-    "leetcode.language": "rust",
-    "leetcode.trace.server": "off"
-
+  // Coc-highlight
+  "highlight.colors.enable": true,
+  "highlight.document.enable": true
 }
