--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -40,6 +40,7 @@
         "/Users/bytedance/.config/nvim/plugged/cmp-cmdline/after",
         "/Users/bytedance/.config/nvim/plugged/cmp-vsnip/after",
         "/Users/bytedance/.config/nvim/plugged/cmp-nvim-lsp-signature-help/after",
-        "${3rd}/luassert/library"
+        "${3rd}/luassert/library",
+        "${3rd}/luv/library"
     ]
 }
