--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -41,6 +41,8 @@
         "/Users/bytedance/.config/nvim/plugged/cmp-vsnip/after",
         "/Users/bytedance/.config/nvim/plugged/cmp-nvim-lsp-signature-help/after",
         "${3rd}/luassert/library",
+        "${3rd}/luv/library",
+        "${3rd}/luassert/library",
         "${3rd}/luv/library"
     ]
 }
