--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -44,5 +44,6 @@
         "${3rd}/luv/library",
         "${3rd}/luassert/library",
         "${3rd}/luv/library"
-    ]
+    ],
+    "workspace.checkThirdParty": false
 }
