--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -45,5 +45,8 @@
         "${3rd}/luassert/library",
         "${3rd}/luv/library"
     ],
-    "workspace.checkThirdParty": false
+    "workspace.checkThirdParty": false,
+    "diagnostics.disable": [
+        "undefined-global"
+    ]
 }
